[package]
name = "ballbot-teensy"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.1"
log = "0.4"
teensy4-panic = "0.2"
alloc-cortex-m = "0.4.3"

[dependencies.teensy4-bsp]
version = "0.3"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
