[package]
name = "ballbot-teensy"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2021"

[dependencies]
embedded-hal = "0.2.1"
log = "0.4.17"
teensy4-panic = "0.2.1"
embedded-alloc = "0.5.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"

[dependencies.teensy4-bsp]
version = "0.3.0"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
